syntax = "proto3";

package user;

service Service {
    rpc Create (User) returns (CreateResponse);
    rpc Get (GetRequest) returns (User);
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message User {
    uint64 id = 1;
    string fullname = 2;
    string email = 3;
}

message CreateResponse {
    uint64 id = 1;
}

message GetRequest {
    uint64 id = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}